--- a/home.css
+++ b/home.css
@@ -3,5 +3,31 @@
 }
 
 body {
-  
+  background-image: url('img/bkgrd1.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+}
+
+#enter-btn-div {
+  width: 15%;
+  margin: auto;
+  position: relative;
+  top: 15em;
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+#enter-button {
+  width: 100%;
+  color: #FFF;
+  background-color: Purple;
+  border-radius: 0;
+  margin: 0;
+  padding: 10%;
+  font-size: 1.2em;
+  font-family: 'Barlow Semi Condensed';
+}
+
+#enter-button:hover {
+  background-color: Green;
 }
