--- a/home.css
+++ b/home.css
@@ -1,3 +1,5 @@
+/* BODY */
+
 * {
 
 }
@@ -7,27 +9,42 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto;
+  padding: 5%;
 }
 
-#enter-btn-div {
-  width: 15%;
-  margin: auto;
-  position: relative;
-  top: 15em;
-  padding-top: 10%;
-  padding-bottom: 10%;
+h1 {
+  font-weight: bold;
 }
+
+/* LANDING PAGE */
+
 #enter-button {
-  width: 100%;
-  color: #FFF;
-  background-color: Purple;
-  border-radius: 0;
-  margin: 0;
-  padding: 10%;
-  font-size: 1.2em;
+  width: 17%;
+  position: relative;
+  top: 12em;
+  text-align: center;
+  color: Purple;
+  margin: 0 auto;
+  font-size: 1.5em;
   font-family: 'Barlow Semi Condensed';
 }
 
 #enter-button:hover {
-  background-color: Green;
+  color: Green;
+}
+
+/* ANIMATIONS */
+.hide {
+  display: none;
+}
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    transform: scale3d(.3, .3, .3);
+  }
+
+  50% {
+    opacity: 1;
+  }
 }
