--- a/intro.css
+++ b/intro.css
@@ -14,6 +14,12 @@ h2 {
   text-align: center;
 }
 
+p {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+}
+
 #header {
   width: auto;
   margin: 0;
