--- a/home.css
+++ b/home.css
@@ -1,9 +1,5 @@
 /* BODY */
 
-* {
-
-}
-
 body {
   background-image: url('img/bkgrd2.jpg');
   background-repeat: no-repeat;
@@ -19,7 +15,8 @@ h1 {
 a {
   text-decoration: none;
 }
-/* LANDING PAGE */
+
+/* MODULES */
 
 #enter-button {
   width: 40%;
@@ -54,4 +51,14 @@ a {
   50% {
     opacity: 1;
   }
+}
+
+/* MOBILE */
+@media screen and (max-width: 650px) {
+
+}
+
+/* DESKTOP */
+@media screen and (min-width: 640px) {
+  
 }
