restructuring CSS using SMACSS guidelines

--- a/styles/home/home.css
+++ b/styles/home/home.css
@@ -1,7 +1,7 @@
 /* BODY */
 
 body {
-  background-image: url('img/bkgrd2.jpg');
+  background-image: url('../../img/bkgrd2.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto;
