--- a/styles/intro/intro.css
+++ b/styles/intro/intro.css
@@ -50,20 +50,22 @@ button {
 }
 
 /* HEADER */
+.header {
+  font-family: 'Abel';
+  font-size: 2.3em;
+  background-color: Black;
+  text-align: center;
+}
 
 #header {
   width: auto;
   margin: 0;
   padding: 3%;
-  background-color: Black;
-  text-align: center;
 }
 
 #header-title {
-  width: 20%;
+  width: 30%;
   margin: 0 auto;
-  font-family: 'Abel';
-  font-size: 2.2em;
 }
 
 .dollar {
@@ -71,7 +73,7 @@ button {
 }
 
 #section-two {
-  background-image: url('img/growth-1.jpg');
+  background-image: url('../../img/growth-1.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
