--- a/styles/intro/intro.css
+++ b/styles/intro/intro.css
@@ -98,3 +98,13 @@ button {
   font-size: 1em;
   font-weight: bold;
 }
+
+/* MOBILE */
+@media screen and (max-width: 640px) {
+
+}
+
+/* DESKTOP */
+@media screen and (min-width: 640px) {
+  
+}
