--- a/styles/intro/intro.css
+++ b/styles/intro/intro.css
@@ -1,4 +1,4 @@
-/* GENERAL/ELEMENTS */
+/* GENERAL, ELEMENTS */
 
 body {
   margin: 0;
@@ -18,6 +18,7 @@ h2 {
   text-align: center;
   font-family: 'Abel';
   font-weight: bold;
+  font-size: 2rem;
 }
 
 p {
@@ -63,6 +64,8 @@ button {
   width: auto;
   margin: 0;
   padding: 3%;
+  position: sticky;
+  top: 0;
 }
 
 #header-title {
@@ -88,6 +91,15 @@ button {
 
 #header-3, #para-3 {
   color: Black;
+}
+
+#section-four {
+  background-color: red;
+  color: #FFF;
+}
+
+#para-4 {
+  color: #FFF;
 }
 
 /* FOOTER */
