--- a/styles/intro/intro.css
+++ b/styles/intro/intro.css
@@ -127,7 +127,7 @@ li.nav-li {
   background-position: center;
   background-size: cover;
   padding: 18%;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 
 #div-5 {
