--- a/styles/intro/intro.css
+++ b/styles/intro/intro.css
@@ -18,11 +18,11 @@ h2 {
   text-align: center;
   font-family: 'Abel';
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 p {
-  width: 60%;
+  width: 66%;
   margin: 0 auto;
   text-align: center;
   font-family: 'Abel';
@@ -71,7 +71,14 @@ button {
 
 #header-title {
   width: 30%;
-  margin: 0 auto;
+  margin: 1rem auto;
+  padding-bottom: 2%;
+}
+
+#link-title {
+  padding: 2%;
+  border: 3px solid #FFF;
+  border-radius: 5px;
 }
 
 .dollar {
@@ -88,8 +95,7 @@ button {
 }
 
 li.nav-li {
-  font-size: 1.5rem;
-  text-decoration: underline;
+  font-size: 1.3rem;
   font-style: italic;
 }
 
@@ -106,6 +112,7 @@ li.nav-li {
 #section-three {
   background-color: #FFF;
   position: relative;
+  padding: 15%;
 }
 
 #header-3, #para-3 {
@@ -115,6 +122,7 @@ li.nav-li {
 #section-four {
   background-color: red;
   color: #FFF;
+  padding: 18%;
 }
 
 #para-4 {
@@ -126,8 +134,7 @@ li.nav-li {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 18%;
-  /* opacity: 0.7; */
+  padding: 19%;
 }
 
 #div-5 {
@@ -145,6 +152,7 @@ li.nav-li {
 #section-six {
   background-color: blue;
   color: #FFF;
+  padding: 11%;
 }
 
 #para-6 {
