--- a/styles/intro/intro.css
+++ b/styles/intro/intro.css
@@ -170,8 +170,10 @@ li.nav-li {
 }
 
 #quote-search {
+  width: 25%;
   padding: 1%; 
   border-radius: 5px;
+  text-align: center;
   color: Black;
   font-size: 1.1rem;
   font-style: italic;
